# enigma2

./: configure.ac
lib/base/: message.h
lib/python/Components/: SystemInfo.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/MyTube/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
