installdir = $(pkglibdir)/python/Plugins/Extensions/Mytube

install_PYTHON =	\
					__init__.pyo \
					MyTubeSearch.pyo \
					MyTubeService.pyo \
					plugin.pyo \
					ThreadQueue.pyo

dist_install_DATA = \
					keymap.xml \
					list_bg.png \
					mytubemain_bg.png \
					list_sel.png \
					starsbar_empty.png \
					suggestions_bg.png \
					starsbar_filled.png \
					maintainer.info
